fix(packaging): bind evidence to current package plans